[gd_scene load_steps=15 format=3 uid="uid://d1fw2pm5ymbw2"]

[ext_resource type="Texture2D" uid="uid://clg7vgln2lh17" path="res://Sprites/Level-1/Baground_1.png" id="1_evi0p"]
[ext_resource type="Script" uid="uid://cpigge14curxl" path="res://Scripts/level_info.gd" id="1_xrdnt"]
[ext_resource type="AudioStream" uid="uid://musm0fgce63p" path="res://Songs/baby shark-70bpm.mp3" id="2_af3po"]
[ext_resource type="Texture2D" uid="uid://cp5s3wi113myq" path="res://Sprites/Level-1/Bush1.png" id="3_lsmp6"]
[ext_resource type="Script" uid="uid://b8ik6voe1b5cu" path="res://Scripts/camera.gd" id="3_xrdnt"]
[ext_resource type="PackedScene" uid="uid://dqd15smav6in8" path="res://Scenes/aiming_worm.tscn" id="4_7p6j4"]
[ext_resource type="Script" uid="uid://bejdq8t61ff5w" path="res://Scripts/through_obstacle.gd" id="5_chwpn"]
[ext_resource type="Script" uid="uid://73slbrv2bbbg" path="res://Scripts/bounce_obstacle.gd" id="5_evi0p"]
[ext_resource type="Texture2D" uid="uid://d0nh5lnrphmqy" path="res://Sprites/Level-1/tree1.png" id="6_xrdnt"]
[ext_resource type="PackedScene" uid="uid://bewilwety7of5" path="res://Scenes/human.tscn" id="7_lsmp6"]
[ext_resource type="Theme" uid="uid://d383fpe3rti48" path="res://simple_pink_theme.tres" id="9_wrinw"]
[ext_resource type="Texture2D" uid="uid://jng2c4g45ogc" path="res://Sprites/Level-1/Radio2Level1.png" id="12_uy8f0"]

[sub_resource type="AudioEffectHighPassFilter" id="AudioEffectHighPassFilter_af3po"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evi0p"]
size = Vector2(31, 207)

[node name="Level1" type="Node2D" node_paths=PackedStringArray("humans", "main_target", "stream_player", "level_rect_extents", "cam")]
script = ExtResource("1_xrdnt")
humans = [NodePath("Human"), NodePath("Human2"), NodePath("Human3"), NodePath("Human4")]
main_target = NodePath("Human4")
stream_player = NodePath("AudioStreamPlayer")
level_rect_extents = NodePath("LevelRectExtents")
cam = NodePath("Camera2D")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_af3po")

[node name="Background" type="Node2D" parent="."]
z_index = -128

[node name="Baground1" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(0, 11)
scale = Vector2(0.48299712, 0.48299712)
texture = ExtResource("1_evi0p")
centered = false

[node name="Baground2" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(4, -802)
scale = Vector2(0.48299712, 0.48299712)
texture = ExtResource("1_evi0p")
centered = false

[node name="Baground3" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(-1132, -802)
scale = Vector2(0.48299712, 0.48299712)
texture = ExtResource("1_evi0p")
centered = false

[node name="Baground4" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(-1128, 7)
scale = Vector2(0.48299712, 0.48299712)
texture = ExtResource("1_evi0p")
centered = false

[node name="Baground5" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(1129, 7)
scale = Vector2(0.48299712, 0.48299712)
texture = ExtResource("1_evi0p")
centered = false

[node name="Baground6" type="Sprite2D" parent="Background"]
texture_repeat = 2
position = Vector2(1140, -822)
scale = Vector2(0.48299712, 0.48299712)
texture = ExtResource("1_evi0p")
centered = false

[node name="AimingWorm" parent="." node_paths=PackedStringArray("level", "cam") instance=ExtResource("4_7p6j4")]
position = Vector2(61, 593)
level = NodePath("..")
cam = NodePath("../Camera2D")

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("follow_target")]
script = ExtResource("3_xrdnt")
follow_target = NodePath("../AimingWorm")
zoom_target = 1.0

[node name="LevelRectExtents" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LevelRectExtents"]

[node name="Marker2D2" type="Marker2D" parent="LevelRectExtents"]
position = Vector2(1267, 765)

[node name="Bush" type="Area2D" parent="."]
position = Vector2(903, 318)
script = ExtResource("5_chwpn")
effect = SubResource("AudioEffectHighPassFilter_af3po")

[node name="Bush1" type="Sprite2D" parent="Bush"]
scale = Vector2(0.2, 0.20152329)
texture = ExtResource("3_lsmp6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bush"]
scale = Vector2(0.2, 0.20152329)
polygon = PackedVector2Array(236, 285, -280, 276, -394, 63, -257, -146, -43, -265, 285, -269, 393, -2)

[node name="Tree2" type="StaticBody2D" parent="."]
position = Vector2(585, 532)
script = ExtResource("5_evi0p")

[node name="Tree1" type="Sprite2D" parent="Tree2"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_xrdnt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree2"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_evi0p")

[node name="Tree" type="StaticBody2D" parent="."]
position = Vector2(290, 394)
script = ExtResource("5_evi0p")

[node name="Tree1" type="Sprite2D" parent="Tree"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_xrdnt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tree"]
position = Vector2(-4.5, 7.5)
shape = SubResource("RectangleShape2D_evi0p")

[node name="Human" parent="." instance=ExtResource("7_lsmp6")]
position = Vector2(278, 634)

[node name="Human2" parent="." instance=ExtResource("7_lsmp6")]
position = Vector2(1151, 343)

[node name="Human3" parent="." instance=ExtResource("7_lsmp6")]
position = Vector2(541, 290)

[node name="Human4" parent="." instance=ExtResource("7_lsmp6")]
position = Vector2(1043, 105)

[node name="HumanSprite" parent="Human4" index="1"]
region_rect = Rect2(262.5, 24, 215, 319)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Level_Time_Label" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.047058824, 0.09803922, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Time : 0.00"

[node name="Humans_Infected_Label" type="Label" parent="HUD"]
offset_top = 30.0
offset_right = 119.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0.047058824, 0.09803922, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Humans : 0/3"

[node name="Bounces" type="Label" parent="HUD"]
offset_top = 65.0
offset_right = 146.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(0.047058824, 0.09803922, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Bounces : 0"

[node name="WinScreen" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WinText" type="Label" parent="HUD/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 466.5
offset_top = 272.5
offset_right = 645.5
offset_bottom = 335.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.11764706, 1, 1)
theme_override_font_sizes/font_size = 45
text = "Everyones Groovin!"

[node name="RetryButton" type="Button" parent="HUD/WinScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 888.0
offset_top = 449.0
offset_right = 1112.0
offset_bottom = 526.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("9_wrinw")
text = "Retry (R)"

[node name="HomeButton" type="Button" parent="HUD/WinScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 888.0
offset_top = 531.0
offset_right = 1112.0
offset_bottom = 608.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("9_wrinw")
text = "Menu"

[node name="Radio2Level1" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(54.000004, 588)
scale = Vector2(0.07118696, 0.07118697)
texture = ExtResource("12_uy8f0")

[connection signal="pressed" from="HUD/WinScreen/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HUD/WinScreen/HomeButton" to="." method="_on_home_button_pressed"]

[editable path="Human4"]
